fixed vertical align

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,7 +22,7 @@
   width: 150px;
 }
 
-.cp div{
+.session div{
   display: inline-block;
 }
 
@@ -32,12 +32,13 @@
 }
 
 .q_votes, .status, .views {
+  /*padding-top: 20px;*/
   color: black;
-  padding-top: 15px;
-  height: 45px;
   width: 60px;
   text-align: center;
-  /*border: 1px solid black;*/
+  position: relative;
+  top: 50%;
+  transform: translateY(-20%);
 }
 
 .a_votes {
@@ -56,7 +57,9 @@
 }
 
 .questions {
-  padding-left: 50px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .questions p, .answers p {
@@ -90,14 +93,18 @@
 }
 
 .voting p {
-  display: inline;
+  /*display: inline;*/
   border: 1px solid;
   border-color: rgba(111,111,111,0.2) transparent transparent;
   border-radius: 35px;
   background-color: #DAE6EF;
   padding-left: 10px;
   padding-right: 10px;
-  margin-left: 30px;
+  text-align: center;
+}
+
+.voting a{
+  text-decoration: none;
 }
 
 .divisor {
@@ -119,8 +126,6 @@
 }
 
 .your_answer {
-  /*margin-left: 500px;*/
-  /*width:500px;*/
   margin: 0 300px;
 }
 
